# Panoptic-PolarNet

./: .dockerignore  .gitignore  Dockerfile  README.md  README_MY.md  docker-compose.yaml  inference.py  pyproject.toml  requirements.txt  run.sh  visualize_pointclouds.py
configs/SemanticKITTI_model/: Panoptic-PolarNet.yaml
dataloader/: dataset.py
notebooks/: visualize_pointclouds.ipynb
panoptic_polarnet/: export_to_onnx.py  inference.py  instance_preprocess.py  test_pretrain.py  test_scatter.py  train.py  visualize_pointclouds.py
panoptic_polarnet/dataloader/: data_inference.py  dataset.py  instance_augmentation.py  process_panoptic.py
panoptic_polarnet/network/: BEV_Unet.py  instance_post_processing.py  loss.py  lovasz_losses.py  ptBEV.py
panoptic_polarnet/utils/: configs.py  eval_pq.py  visual.py
utils/: eval_pq.py
