[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["panoptic_polarnet*"]

[project]
name = "panoptic_polarnet"
description = ""
version = "0.0.1"
readme = "README.md"
keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "torch",
  "torch_scatter"
  "numba",
  "open3d",
  "numpy",
]

[project.optional-dependencies]
dev = [
     "black",
     "pylint",
     "mypy",
     "isort",
]
